[package]
name = "qbft_manager"
version = "0.1.0"
authors = ["Sigma Prime <contact@sigmaprime.io"]
edition = { workspace = true }

[dependencies]
dashmap = { workspace = true }
database = { workspace = true }
ethereum_ssz = { workspace = true }
message_sender = { workspace = true }
processor = { workspace = true }
qbft = { workspace = true }
slot_clock = { workspace = true }
ssv_types = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
types = { workspace = true }

[dev-dependencies]
async-channel = { workspace = true }
futures = { workspace = true }
message_sender = { workspace = true, features = ["testing"] }
task_executor = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber = { workspace = true }
