[package]
name = "signature_collector"
version = "0.1.0"
edition = { workspace = true }
authors = ["Sigma Prime <contact@sigmaprime.io>"]

[dependencies]
bls_lagrange = { workspace = true }
dashmap = { workspace = true }
database = { workspace = true }
ethereum_ssz = { workspace = true }
message_sender = { workspace = true }
processor = { workspace = true }
slot_clock = { workspace = true }
ssv_types = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }
types = { workspace = true }
