[package]
name = "qbft"
version = "0.1.0"
authors = ["Sigma Prime <contact@sigmaprime.io"]
edition = { workspace = true }

[features]
arbitrary-fuzz = ["arbitrary"]

[dependencies]
arbitrary = { workspace = true, optional = true }
derive_more = { workspace = true }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
sha2 = { workspace = true }
ssv_types = { workspace = true }
tracing = { workspace = true }
typenum = { workspace = true }
types = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
