[package]
name = "ssv_types"
version = "0.1.0"
edition = { workspace = true }
authors = ["Sigma Prime <contact@sigmaprime.io>"]

[features]
arbitrary-fuzz = ["arbitrary"]

[dependencies]
arbitrary = { workspace = true, optional = true }
base64 = { workspace = true }
derive_more = { workspace = true }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
openssl = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tree_hash = { workspace = true }
tree_hash_derive = { workspace = true }
types = { workspace = true }
