[package]
name = "ssv_types"
version = "0.1.0"
edition = { workspace = true }
authors = ["Sigma Prime <contact@sigmaprime.io>"]

[features]
arbitrary-fuzz = ["arbitrary"]

[dependencies]
arbitrary = { workspace = true, optional = true }
base64 = { workspace = true }
derive_more = { workspace = true }
eth2 = { workspace = true }
ethereum_ssz = { workspace = true }
ethereum_ssz_derive = { workspace = true }
hex = { workspace = true }
indexmap = { workspace = true }
openssl = { workspace = true }
operator_key = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
slashing_protection = { workspace = true }
ssz_types = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tree_hash = { workspace = true }
tree_hash_derive = { workspace = true }
typenum = { workspace = true }
types = { workspace = true }
zerocopy = "0.8.24"
